--- a/src/main/resources/templates/tasks/staffTasks.html
+++ b/src/main/resources/templates/tasks/staffTasks.html
@@ -13,7 +13,7 @@
                             th:value="${staff.stId}"
                             onclick="deleteStaff(this)"
                             type="button"
-                            class="am-btn page-header-button">
+                            class="am-btn page-header-button loadid">
                         <span class="am-icon-paint-brush"></span>
                         删除人员
                     </button>
